style: Fine adjustments to fix spacing on about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,6 @@ h1 {
 
 h2 {
   font-size: 1.5em;
-  margin-bottom: 0.83em;
 }
 
 h3 {
